--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/radioGroup"
+        android:id="@+id/radioGroupDifficulty"
         android:layout_below="@+id/textView3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -83,7 +83,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Number of Questions (1-5)"
+        android:text="Number of Questions (1-10)"
         android:id="@+id/textView4"
         android:layout_below="@+id/editTextName"
         android:layout_alignParentLeft="true"
