--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -18,26 +18,28 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="130dp"
-            android:layout_weight="0.42">
+            android:layout_height="wrap_content"
+            android:layout_weight="0.65"
+            android:layout_gravity="center"
+            android:gravity="center_vertical|center_horizontal"
+            >
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical|center_horizontal"
                 android:text="Question Placeholder"
                 android:id="@+id/textViewQuestion"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal"
                 android:textSize="20dp" />
         </LinearLayout>
 
-        <GridLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="144dp">
+            android:layout_height="230dp">
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Answer Choice 1"
                 android:id="@+id/buttonAnswer1"
@@ -46,16 +48,16 @@
                 android:textSize="16dp" />
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Answer Choice 2"
                 android:id="@+id/buttonAnswer2"
-                android:layout_row="0"
-                android:layout_column="13"
+                android:layout_row="1"
+                android:layout_column="0"
                 android:textSize="16dp" />
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Answer Choice 3"
                 android:id="@+id/buttonAnswer3"
@@ -64,14 +66,14 @@
                 android:textSize="16dp" />
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Answer Choice 4"
                 android:id="@+id/buttonAnswer4"
-                android:layout_row="2"
-                android:layout_column="13"
+                android:layout_row="3"
+                android:layout_column="0"
                 android:textSize="16dp" />
-        </GridLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
