--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -7,6 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@drawable/logo_v3"
     tools:context="com.example.curtis.swt_quiz_app.QuizActivity">
 
     <LinearLayout
@@ -30,7 +31,8 @@
                 android:gravity="center_vertical|center_horizontal"
                 android:text="Question Placeholder"
                 android:id="@+id/textViewQuestion"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:textColor="#000000" />
         </LinearLayout>
 
         <LinearLayout
